--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -98,6 +98,21 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Views\web.config" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Autor\Autor.cshtml" />
+    <Content Include="Views\Autor\Index.cshtml" />
+    <Content Include="Views\Editorial\Editorial.cshtml" />
+    <Content Include="Views\Editorial\Index.cshtml" />
+    <Content Include="Views\Ejemplar\Ejemplar.cshtml" />
+    <Content Include="Views\Ejemplar\Index.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Libro\Index.cshtml" />
+    <Content Include="Views\Libro\Libro.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Shared\_LayoutPage.cshtml" />
+    <Content Include="Views\Shared\_MenuPartialwithLogin.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -118,9 +133,7 @@
     <Compile Include="BBLL\interfaces\EditorialService.cs" />
     <Compile Include="BBLL\interfaces\EjemplarService.cs" />
     <Compile Include="BBLL\interfaces\LibroService.cs" />
-    <Compile Include="BBLL\interfaces\UsuarioService.cs" />
     <Compile Include="BBLL\LibroServiceImp.cs" />
-    <Compile Include="BBLL\UsuarioServiceImp.cs" />
     <Compile Include="DAL\AutorRepositoryImp.cs" />
     <Compile Include="DAL\EditorialRepositoryImp.cs" />
     <Compile Include="DAL\EjemplarRepositoryImp.cs" />
@@ -128,14 +141,11 @@
     <Compile Include="DAL\interfaces\EditorialRepository.cs" />
     <Compile Include="DAL\interfaces\EjemplarRepository.cs" />
     <Compile Include="DAL\interfaces\LibroRespository.cs" />
-    <Compile Include="DAL\interfaces\UsuarioRepository.cs" />
     <Compile Include="DAL\LibroRepositoryImp.cs" />
-    <Compile Include="DAL\UsuarioRepositoryImp.cs" />
     <Compile Include="Models\Autor.cs" />
     <Compile Include="Models\Editorial.cs" />
     <Compile Include="Models\Ejemplar.cs" />
     <Compile Include="Models\Libro.cs" />
-    <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup>
