--- a/ClienteWS/Web.config
+++ b/ClienteWS/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="gestionBiblioteca" connectionString="Data Source=FORMACION-TOSH2;Initial Catalog=GESTLIBRERIA;User ID=curso;Password=curso" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
